  o Fix some overflow crashes in aiff handler. (1430024)  Ulf Hamhammar.
  o Under windows, set piped input to binary mode (1417794). Marty
  o Fixed broken internal version of strdup().  (1417790) Marty
  o Stop infinite loop when reading MP3's with a tag size of
    exactly 8192 bytes.  (1417511) Hans Fugal
  o Fix typo in stlib.dsp for loading in Visual Studio 6.

sox-12.17.9
-----------

  o Updates to compile under VC6. Jimen Ching
  o Declare st_signalinfo_t to specifically be signed in case
    platform does not default ot signed chars.  This
    is required for NetBSD/powerpc.
  o When seek()ing in AIFF, SMP, and WAV handlers, remaining samples were
    incorrectly computed based on bytes and not samples.  Jukka
  o Changed noisered effect to just warn during clipping instead
    of aborting.  Ian Turner
  o Fixed bug were pieces of audio were lost every buffer read
    when running both -c and -r options together on mono audio.
    Users probably percieved it as shorter audio files that
    played with a sped up tempo.
    Bugfix will also apply to other times when multiple effects
    are ran on the command line.
  o Added support for -V option to play/rec scripts.
  o Fix to silence effect to allow negative periods to be specified
    (to remove silence from middle of sound file).
  o Fix swap option handling so that special case of "swap 1 1" will
    work.
  o Track length of Ogg Vorbis files on read.
  o Add support for displaying a status line that tracks progress
    of read/write routines.  Part of information requires read
    file handlers to be able to determine file length.
  o Converted alsa driver to use asoundlib instead of directly
    talking to kernel driver.  This also means that device names
    are now the ALSA logical names instead of /dev type names.
  o Added ALSA support to play/rec scripts.
  o Added st_open*, st_read, st_write, st_seek, st_close routines 
    to help simplify developer interface to libst.  See libst.3..